[package]
name = "lo3"
version = "0.3.1-alpha"
author = "Santhosh Solomon <solomon.santhosh@gmail.com>"
description = "Faster logger than python native logging package. "
readme = "README.md"
repository = "https://github.com/DataEnggNerd/MH370"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
chrono = "0.4.38"
